bug fix – XMLHttprequest->XMLHttpRequest

--- a/mapchat/index.html
+++ b/mapchat/index.html
@@ -11,7 +11,7 @@
         <script>
             var mylat = 0;
             var mylng = 0;
-            var request = new XMLHttprequest();
+            var request = new XMLHttpRequest();
             var me = new google.maps.LatLng(mylat, mylng);
             var myOptions = {
                 zoom: 13,
