--- a/mapchat/index.html
+++ b/mapchat/index.html
@@ -4,7 +4,7 @@
 <html>
 
 	<head>
-		<title>Geolocation Map Example</title>
+		<title>Mapchat</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" href="style.css" />
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
